MyBatis and Query

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port= 3030
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/springcommerce
+spring.datasource.username=root
+spring.datasource.password=duydeptrai
+
+mybatis.mapper-locations=classpath:com/example/SpringCommerceShop/Mapper/Sql/*.xml
+mybatis.type-aliases-package=com.example.SpringCommerceShop.Modal
