--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-config:5.6.1'
+	
+    implementation 'org.springframework.data:spring-data-commons:2.5.5'
+
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -34,7 +38,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '3.0.5'
-	
+
 }
 
 tasks.named('test') {
