--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ db.datasource.password=BOASTAw6Ff0NTbI3ZKGJ/g==
 
 mybatis.mapper-locations=classpath:com/example/SpringCommerceShop/Mapper/Sql/*.xml
 mybatis.type-aliases-package=com.example.SpringCommerceShop.Modal
+
+#spring.main.allow-bean-definition-overriding=true
